Modify the contact Model for additional fields
